@@ -111,3 +111,4 @@ Contributors
 - Atsushi Odagiri, 2012/02/05
 - Josh Finnie, 2012/02/16
 - Daniel Nouri, 2012/03/30
+- David Beitey, 2012/09/05
